Added some special stuff

--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -27,7 +27,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import config \n",
+    "import pymongo \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
