pushed new updates

--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -81,6 +81,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x1d499ef8a40>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dac=dab[\"BOOKS\"]\n",
+    "updae={\n",
+    "    \"$set\":{\n",
+    "        \"organization\":\"GTSocial\"\n",
+    "    }\n",
+    "}\n",
+    "dac.update_many({},updae)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
