added return and some more stuff

--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -60,6 +60,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x24000b44e80>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dac=dab[\"CONFIGS\"]\n",
+    "inserter={\n",
+    "    \"Config_Name\":\"Library_parameters\",\n",
+    "    \"GTSocial\":{\n",
+    "          \"Day_Penality\":10,\n",
+    "          \"Month_Penality\":100,\n",
+    "          \"Year_Penality\":1000,\n",
+    "    }\n",
+    "}\n",
+    "dac.insert_one(inserter)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
