--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -60,6 +60,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "dump() missing 1 required positional argument: 'fp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12676/2011970092.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mr1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"organization\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mr1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"_id\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Organization\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: dump() missing 1 required positional argument: 'fp'"
+     ]
+    }
+   ],
+   "source": [
+    "dac=dab[\"UNIQUE_BOOK_IDS\"]\n",
+    "import json\n",
+    "r1=dac.find_one({\"author\":\"KBM\"},{\"BOOK_ID\":1,\"organization\":1,\"_id\":1})\n",
+    "\n",
+    "{\n",
+    "        \"Book_id\": \"64c4df1dc6f7f2ad4da3530c\",\n",
+    "        \"Organization\": \"GTSocial\",\n",
+    "        \"unique_book_id\":\"lifethodihardhai\",\n",
+    "        \"card_type\":\"Book_card\"\n",
+    "}\n",
+    "# print(r1)\n",
+    "r1[\"unique_book_id\"]=str(r1[\"_id\"])\n",
+    "r1[\"card_type\"]=\"Book_card\"\n",
+    "r1[\"Organization\"]=r1[\"organization\"]\n",
+    "r1[\"Book_id\"]=r1[\"BOOK_ID\"]\n",
+    "del r1[\"BOOK_ID\"]\n",
+    "del r1[\"organization\"]\n",
+    "r1.pop(\"_id\")\n",
+    "print(json.loads(json.dumps(r1))[\"Organization\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -132,6 +175,28 @@
     "    }\n",
     "}\n",
     "dac.update_many({},updae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import dbops\n",
+    "import json\n",
+    "dbops.QR_code_operations.generate_QR(json.dumps(r1,indent=2))"
    ]
   },
   {
