--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -60,25 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "dump() missing 1 required positional argument: 'fp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12676/2011970092.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mr1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"organization\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mr1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"_id\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Organization\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: dump() missing 1 required positional argument: 'fp'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dac=dab[\"UNIQUE_BOOK_IDS\"]\n",
     "import json\n",
-    "r1=dac.find_one({\"author\":\"KBM\"},{\"BOOK_ID\":1,\"organization\":1,\"_id\":1})\n",
+    "r1=dac.find_one({\"author\":\"RLSTINE\"},{\"BOOK_ID\":1,\"organization\":1,\"_id\":1})\n",
     "\n",
     "{\n",
     "        \"Book_id\": \"64c4df1dc6f7f2ad4da3530c\",\n",
@@ -94,8 +82,9 @@
     "del r1[\"BOOK_ID\"]\n",
     "del r1[\"organization\"]\n",
     "r1.pop(\"_id\")\n",
-    "print(json.loads(json.dumps(r1))[\"Organization\"])\n",
-    "\n",
+    "# Take all values and string them together\n",
+    " #                    0                          1                 2                 3\n",
+    "final_string=r1[\"unique_book_id\"]+\"-\"+r1[\"Organization\"]+\"-\"+r1[\"Book_id\"]+\"-\"+r1[\"card_type\"]\n",
     "\n",
     "\n",
     "\n"
@@ -179,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +177,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +185,29 @@
    "source": [
     "import dbops\n",
     "import json\n",
-    "dbops.QR_code_operations.generate_QR(json.dumps(r1,indent=2))"
+    "dbops.QR_code_operations.generate_QR(final_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('64c0f05a6cced1e7805d4703'), 'email': 'tester@gmail.com', 'id_number': '123456789', 'organization': ['GTSocial']}\n",
+      "64c0f05a6cced1e7805d4703-GTSocial-tester@gmail.com-Identity_card\n"
+     ]
+    }
+   ],
+   "source": [
+    "dac=dab[\"USERS\"]\n",
+    "r1=dac.find_one({\"email\":\"tester@gmail.com\"},{\"_id\":1,\"email\":1,\"id_number\":1,\"organization\":1})\n",
+    "print(r1)\n",
+    "final_string=str(r1[\"_id\"])+\"-\"+r1[\"organization\"][0]+\"-\"+r1[\"email\"]+\"-\"+\"Identity_card\"\n",
+    "print(final_string)"
    ]
   },
   {
