Dont forget bleach

--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -60,6 +60,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x24db08a6c40>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dac=dab[\"CONFIGS\"]\n",
+    "inserter={\n",
+    "    \"Config_Name\":\"PERMISSIONS_DICTIONARY\",\n",
+    "    \"Role_Permission_Dictionary\":{\n",
+    "    \"Admin\":[\n",
+    "    \"register_book\",\n",
+    "    \"login\",\n",
+    "    \"get_book_tags\",\n",
+    "    \"get_book_list\",\n",
+    "    \"get_user_list\",\n",
+    "    \"admin_rent_book\",\n",
+    "    \"get_specific_user_list\",\n",
+    "    \"get_specific_book_details\",\n",
+    "    \"dashboard_page\",\n",
+    "    \"get_unique_book_ids\",\n",
+    "    \"get_unique_book_ids_returns\",\n",
+    "    \"admin_return_book\",\n",
+    "    \"admin_scanner_actions\",\n",
+    "    \"admin_edit_book\"\n",
+    "  ],\n",
+    "  \"Staff\":[\n",
+    "    \"login\",\n",
+    "    \"get_book_tags\",\n",
+    "    \"get_book_list\",\n",
+    "     \"get_user_list\",\n",
+    "         \"dashboard_page\",\n",
+    "  ],\n",
+    "  \"Student\":[\n",
+    "          \"login\",\n",
+    "    \"get_book_tags\",\n",
+    "    \"get_book_list\",\n",
+    "     \"get_user_list\",\n",
+    "         \"dashboard_page\",\n",
+    "      \n",
+    "  ],\n",
+    "  \"Staff\":[\n",
+    "          \"login\",\n",
+    "    \"get_book_tags\",\n",
+    "    \"get_book_list\",\n",
+    "     \"get_user_list\",\n",
+    "         \"dashboard_page\",\n",
+    "  ],\n",
+    "  \"Other\":[\n",
+    "          \"login\",\n",
+    "    \"get_book_tags\",\n",
+    "    \"get_book_list\",\n",
+    "     \"get_user_list\",\n",
+    "         \"dashboard_page\",\n",
+    "  ]\n",
+    "    },\n",
+    "  \"Roles_List\":[\n",
+    "    \"Admin\",\n",
+    "    \"Staff\",\n",
+    "    \"Student\",\n",
+    "    \"Other\"\n",
+    "  ],\n",
+    "}\n",
+    "dac.insert_one(inserter)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -88,6 +165,49 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GTSocial\n",
+      "[{'user_all_time_total_dues_counter': 1,\n",
+      "  'user_all_user_total_penality': 10,\n",
+      "  'user_current_active_rents': 1,\n",
+      "  'user_total_amount_paid': 0,\n",
+      "  'user_total_books_taken_for_rent': 7,\n",
+      "  'user_total_users': 2},\n",
+      " {'books_noofcopies_books_available_currently': 13,\n",
+      "  'books_noofcopies_rented_currently': 1,\n",
+      "  'books_nooftimes_books_have_been_rented': 7,\n",
+      "  'books_total_number_of_books_registered': 3},\n",
+      " {'card_data': [{'author': 'KBM2',\n",
+      "                 'book_name': 'KOTHA BOOK MAWA2',\n",
+      "                 'book_tags': ['Honebells', 'Honess'],\n",
+      "                 'email': 'Ramta@gmail.com',\n",
+      "                 'id_number': '5s6dfa1ad6s5f4',\n",
+      "                 'overduefor': 4,\n",
+      "                 'penality': 10,\n",
+      "                 'rented_for': '3',\n",
+      "                 'rented_on': '2023-09-25 21:29:20.410236',\n",
+      "                 'role': 'Student',\n",
+      "                 'user_name': 'Ramta jogi'}],\n",
+      "  'penality': 10,\n",
+      "  'total_number_of_overdue_books': 1,\n",
+      "  'total_penality': 20}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dbops\n",
+    "from pprint import pprint as print\n",
+    "print(dbops.getters.get_simple_meta_data(\"GTSocial\"))"
    ]
   },
   {
