--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -62,6 +62,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simple reset.\n",
+    "dab[\"BOOKS\"].drop()\n",
+    "dab[\"UNIQUE_BOOK_IDS\"].drop()\n",
+    "dab[\"OLD_UNIQUE_BOOK_IDS_RECORDS\"].drop()\n",
+    "dab[\"RENTS\"].drop()\n",
+    "dab[\"RENT_RECORDS\"].drop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -137,13 +151,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '556465a4.56498'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13928/3122815771.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mr1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"556465a4.56498\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# Verify\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: '556465a4.56498'"
+     ]
+    }
+   ],
+   "source": [
+    "r1=\"556465a4.56498\"\n",
+    "print(float(r1))\n",
+    "# Verify "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'apples' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'e:/2Semmasters/Siriscilla_degree_college/LibSoftware/apples/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "import qrcode\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    " \n",
+    "\n",
+    "# Text to display below the QR code\n",
+    "text_below_qr = \"Your Text Here\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Create an image from the QR code\n",
+    "with open(\"qr.png\", \"rb\") as qr:\n",
+    "    qr_img = Image.open(qr).copy()\n",
+    "\n",
+    "# Add text below the QR code\n",
+    "draw = ImageDraw.Draw(qr_img)\n",
+    "font = ImageFont.load_default()  # You can choose a different font and size if needed\n",
+    "w, h = draw.textsize(text_below_qr, font=font)\n",
+    "draw.text(((qr_img.size[0] - w) / 2, (qr_img.size[1] - h) - 10), text_below_qr, font=font)\n",
+    "qr_img.save(\"qr_code.png\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "dac=dab[\"UNIQUE_BOOK_IDS\"]\n",
     "import json\n",
-    "r1=dac.find_one({\"author\":\"RLSTINE\"},{\"BOOK_ID\":1,\"organization\":1,\"_id\":1})\n",
+    "r1=dac.find_one({\"author\":\"Mata vinakunte \"},{\"BOOK_ID\":1,\"organization\":1,\"_id\":1})\n",
     "\n",
     "{\n",
     "        \"Book_id\": \"64c4df1dc6f7f2ad4da3530c\",\n",
@@ -288,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +372,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +403,24 @@
     "print(r1)\n",
     "final_string=str(r1[\"_id\"])+\"-\"+r1[\"organization\"][0]+\"-\"+r1[\"email\"]+\"-\"+\"Identity_card\"\n",
     "print(final_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fasdfui asdfu aisdfj asdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "kq=\"fasdfui asdfu aisdfj asdf \"\n",
+    "print(kq.strip())"
    ]
   },
   {
