--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -425,6 +425,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'User_Email': 'tester@gmail.com',\n",
+       "  'User_Name': 'testuser',\n",
+       "  'Book_Rented_On': '2023-11-11 15:17:00.193274',\n",
+       "  'authorizer_email': 'tester@gmail.com',\n",
+       "  'rentedfor': '7',\n",
+       "  'unique_book_id': '651a90c7be1911bf45d1df74',\n",
+       "  'potential_penality': 40,\n",
+       "  'time_difference': 11}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import dbops\n",
+    "\n",
+    "dbops.getters.get_all_rented_book_list(0,10,\"GTSocial\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decorating the toy!\n",
+      "Playing with my toy!\n",
+      "Putting the toy back in the box!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is your toy (function)\n",
+    "def my_toy():\n",
+    "    print(\"Playing with my toy!\")\n",
+    "\n",
+    "# This is your decorator (special wrapper paper)\n",
+    "def toy_decorator(func):\n",
+    "    def wrapper():\n",
+    "        print(\"Decorating the toy!\")\n",
+    "        func()  # This is where you play with the original toy\n",
+    "        print(\"Putting the toy back in the box!\")\n",
+    "    return wrapper\n",
+    "\n",
+    "# Now, let's use the decorator!\n",
+    "decorated_toy = toy_decorator(my_toy)\n",
+    "\n",
+    "# Play with the decorated toy\n",
+    "decorated_toy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a special toy!\n",
+      "Playing with my toy!\n",
+      "Putting the toy back in the box!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is your toy (function)\n",
+    "def my_toy():\n",
+    "    print(\"Playing with my toy!\")\n",
+    "\n",
+    "# This is your decorator (special wrapper paper)\n",
+    "def toy_decorator(func):\n",
+    "    # This is the label card function\n",
+    "    def label_card():\n",
+    "        # func()\n",
+    "        print(\"This is a special toy!\")\n",
+    "\n",
+    "    # This is the wrapper function\n",
+    "    def wrapper():\n",
+    "        label_card()  # Attach the label card\n",
+    "        func()        # This is where you play with the original toy\n",
+    "        print(\"Putting the toy back in the box!\")\n",
+    "\n",
+    "    return wrapper\n",
+    "\n",
+    "# Now, let's use the decorator!\n",
+    "decorated_toy = toy_decorator(my_toy)\n",
+    "\n",
+    "# Play with the decorated toy\n",
+    "decorated_toy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
