--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -531,10 +531,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sss'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r1={\"eaal\":\"sss\"}\n",
+    "r1.get(\"eaal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "r1={\n",
+    "  \"username\": \"testuser\",\n",
+    "  \"password\": \"e9e633097ab9ceb3e48ec3f70ee2beba41d05d5420efee5da85f97d97005727587fda33ef4ff2322088f4c79e8133cc9cd9f3512f4d3a303cbdb5bc585415a00\",\n",
+    "  \"email\": \"tester@gmail.com\",\n",
+    "  \"id_number\": \"123456789\",\n",
+    "  \"Role\": \"Student\",\n",
+    "  \"permissions\": [\n",
+    "    \"register_book\",\n",
+    "    \"login\",\n",
+    "    \"logout_api\",\n",
+    "    \"get_book_tags\",\n",
+    "    \"simple_meta_data\",\n",
+    "    \"get_book_list\",\n",
+    "    \"get_user_list\",\n",
+    "    \"admin_rent_book\",\n",
+    "    \"get_specific_user_list\",\n",
+    "    \"get_specific_book_details\",\n",
+    "    \"dashboard_page\",\n",
+    "    \"get_unique_book_ids\",\n",
+    "    \"get_unique_book_ids_returns\",\n",
+    "    \"admin_return_book\",\n",
+    "    \"admin_scanner_actions\",\n",
+    "    \"admin_edit_book\",\n",
+    "    \"admin_register_api_passwordless\",\n",
+    "    \"delete_admin_book\",\n",
+    "    \"admin_add_user_payment\",\n",
+    "    \"get_rented_book_list\",\n",
+    "    \"get_book_list_special_filter\"\n",
+    "  ],\n",
+    "  \"Library\": {\n",
+    "    \"Number_of_books_rented_currently\": 2,\n",
+    "    \"Number_of_books_returned\": 0,\n",
+    "    \"Number_of_times_overdue\": 0,\n",
+    "    \"Total_Number_of_books_rented\": 2,\n",
+    "    \"Total_fine_amount\": 0,\n",
+    "    \"Total_fine_amount_paid\": 0,\n",
+    "    \"Total_fine_amount_pending\": 0,\n",
+    "    \"Total_fine_amount_waived\": 0,\n",
+    "    \"GTSocial\": {\n",
+    "      \"Number_of_books_rented_currently\": 0,\n",
+    "      \"Total_Number_of_books_rented\": 2,\n",
+    "      \"Total_amount_paid\": 515,\n",
+    "      \"Number_of_books_returned\": 2,\n",
+    "      \"Number_of_times_overdue\": 2,\n",
+    "      \"Total_fine_amount\": 480\n",
+    "    }\n",
+    "  },\n",
+    "  \"organization\": [\n",
+    "    \"GTSocial\"\n",
+    "  ]\n",
+    "}\n",
+    "dac=dab[\"USERS\"]\n",
+    "dac.insert_one(r1)"
+   ]
   }
  ],
  "metadata": {
