--- a/tester_notebook.ipynb
+++ b/tester_notebook.ipynb
@@ -610,6 +610,68 @@
     "dac=dab[\"USERS\"]\n",
     "dac.insert_one(r1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r2={\n",
+    "  \"_id\": {\n",
+    "    \"$oid\": \"651692d09e401cd3b53439a6\"\n",
+    "  },\n",
+    "  \"Config_Name\": \"PERMISSIONS_DICTIONARY\",\n",
+    "  \"Role_Permission_Dictionary\": {\n",
+    "    \"Admin\": [\n",
+    "      \"register_book\",\n",
+    "      \"login\",\n",
+    "      \"get_book_tags\",\n",
+    "      \"get_book_list\",\n",
+    "      \"get_user_list\",\n",
+    "      \"admin_rent_book\",\n",
+    "      \"get_specific_user_list\",\n",
+    "      \"get_specific_book_details\",\n",
+    "      \"dashboard_page\",\n",
+    "      \"get_unique_book_ids\",\n",
+    "      \"get_unique_book_ids_returns\",\n",
+    "      \"admin_return_book\",\n",
+    "      \"admin_scanner_actions\",\n",
+    "      \"admin_edit_book\"\n",
+    "    ],\n",
+    "    \"Staff\": [\n",
+    "      \"login\",\n",
+    "      \"get_book_tags\",\n",
+    "      \"get_book_list\",\n",
+    "      \"get_user_list\",\n",
+    "      \"dashboard_page\"\n",
+    "    ],\n",
+    "    \"Student\": [\n",
+    "      \"login\",\n",
+    "      \"get_book_tags\",\n",
+    "      \"get_book_list\",\n",
+    "      \"get_user_list\",\n",
+    "      \"dashboard_page\"\n",
+    "    ],\n",
+    "    \"Other\": [\n",
+    "      \"login\",\n",
+    "      \"get_book_tags\",\n",
+    "      \"get_book_list\",\n",
+    "      \"get_user_list\",\n",
+    "      \"dashboard_page\"\n",
+    "    ]\n",
+    "  },\n",
+    "  \"Roles_List\": [\n",
+    "    \"Admin\",\n",
+    "    \"Staff\",\n",
+    "    \"Student\",\n",
+    "    \"Other\"\n",
+    "  ],\n",
+    "  \"organization\": \"GTSocial\"\n",
+    "}\n",
+    "dac=dab[\"CONFIGS\"]\n",
+    "dac.insert_one(r2)"
+   ]
   }
  ],
  "metadata": {
